Refactoring variables and fixing overlay width on mobile displays

--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Esteban|Montserrat:400,700");
-header {
-  font-size: 16px; }
-
-body,
-html {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
-  color: #232323; }
-
 .navbar {
   position: absolute; }
 
@@ -30,7 +18,17 @@ nav {
       display: inline-block;
       margin: 0 50px; }
 
+body,
+html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-size: 18px;
+  color: #232323; }
+
 .header {
+  font-size: 18px;
   position: relative;
   display: flex;
   justify-content: center;
@@ -174,7 +172,7 @@ nav {
       .contact .inputRow .inputGroup label {
         font: "Esteban";
         opacity: 0;
-        font-size: 12px;
+        font-size: 14px;
         animation: 0.5s ease-in;
         position: absolute;
         z-index: 8;
@@ -232,7 +230,7 @@ nav {
       .footer .footer-padding .footer-left .footer-contact a {
         color: #3E70D5 !important;
         font-weight: 700;
-        font-size: 19px; }
+        font-size: 21px; }
       .footer .footer-padding .footer-left .footer-copyright {
         color: #858585; }
     .footer .footer-padding .footer-right {
@@ -264,9 +262,6 @@ nav {
         bottom: 0; }
 
 @media (max-width: 1100px) {
-  .showcase .item .overlay {
-    max-width: 50%; }
-
   .header {
     width: 100%; }
     .header #anomaly,
