--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,5 +1,24 @@
-$global_font_size: 16px;
+.navbar {
+  position: absolute;
+}
 
-header {
-  font-size: $global_font_size;
+nav {
+  width: 100%;
+  position: absolute;
+  z-index: 10;
+  font: $heading;
+  font-weight: 0;
+  font-size: 20px;
+  background-color: #fff !important;
+
+  ul {
+    list-style: none;
+    font-weight: 600;
+    letter-spacing: 1.2px;
+
+    li {
+      display: inline-block;
+      margin: 0 50px;
+    }
+  }
 }
